# face-verify

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
src/: app.py
