[tool.poetry]
name = "face-verify"
version = "0.1.0"
description = ""
authors = ["mpszkudlarek <michal1szkudlarek@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.8"
pydantic = "^2.10.6"
numpy = "^2.2.2"
opencv-python = "^4.11.0.86"
black = "^25.1.0"
isort = "^6.0.0"
mypy = "^1.15.0"
pylint = "^3.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
